fix abnormal color in dark mode

--- a/module/webroot/styles.css
+++ b/module/webroot/styles.css
@@ -210,6 +210,10 @@ body {
         border: 1px solid #6E6E6E;
     }
     
+    .search-input {
+        color: white;
+    }
+    
     .menu-options,
     #menu-button {
         background-color: #343434;
